--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,14 +21,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      - name: Navigate to working directory
+        run: cd ./infra
 
-      - name: Install CDK
-        run: npm install -g aws-cdk
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install -g aws-cdk
   
       - name: Create example bucket
-        run: |
-          cd ./infra
-          cdk deploy
+        run: cdk deploy
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
