--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: Navigate to working directory
-        run: cd ./infra
 
       - name: Install dependencies
         run: |
@@ -32,7 +29,7 @@ jobs:
   
       - name: Create example bucket
         run: |
-          ls
+          cd ./infra
           cdk deploy
   deploy:
     runs-on: ubuntu-latest
