--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,18 @@ jobs:
           npm install
           npm install -g aws-cdk
   
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::030460844096:role/GitHubAction-AssumeRoleWithAction
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: us-west-1
+          
       - name: Create example bucket
         run: |
           cd ./infra
           cdk deploy
+          
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
